--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     Select Month
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="monthDropdown" id="monthDropdownMenu">
-                    <!-- Month options will be dynamically added here -->
+                    <!-- Month options will be dynamically added here. -->
                 </ul>
             </div>
         </div>
