--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+    <base href="%PUBLIC_URL%/">
     <title>Finance Tracker</title>
   </head>
   <body>
